added function to request permission

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body onload="notify()">
     <div class="container">
-        <input type="submit" onclick="notify()" value="notify">
+        <input type="submit" onclick="get_perm()" value="notify">
     </div>
     <script src="js/main.js"></script>
 </body>
